--- a/index.html
+++ b/index.html
@@ -402,19 +402,20 @@
 
 
    <!-- Quote Start -->
-<div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
+<<h3 class="text-primary">Get Quotation</h3>
+   <hr>
+    div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
     <div class="container quote px-lg-0">
-        <h3 class="text-primary">Get Quotation!</h3>
-                 <div class="row g-0 mx-lg-0">
+        <div class="row g-0 mx-lg-0">
             <div class="col-lg-6 ps-lg-0 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
                 <div class="position-relative h-100">
-                    <img class="position-absolute img-fluid w-100 h-100" src="img/quote.jpg" style="object-fit: cover;" alt="">
+                    <img class="position-absolute img-fluid w-100 h-100" src="img/solar-calc.jpeg" style="object-fit: cover;" alt="">
                 </div>
             </div>
             <div class="col-lg-6 quote-text py-5 wow fadeIn" data-wow-delay="0.5s">
                 <div class="p-lg-5 pe-lg-0">
                     <h6 class="text-primary">Get Started with Solar!</h6>
-                    <h1 class="mb-4">Get Your Solar System Requirements & Estimate</h1>
+                    <h1 class="mb-4">Get Your Solar System Requirements & Estimated Cost</h1>
                     <p class="mb-4 pb-2">Use our Solar System Calculator to get a personalized estimate for your solar inverter system. Follow these steps:</p>
                     <ol class="mb-4 pb-2">
                         <li>Enter your correct personal details.</li>
@@ -422,7 +423,7 @@
                         <li>Press the calculate button and allow the system to generate your requirements and estimated cost.</li>
                         <li>Chat with one of our experts using the generated button link to discuss your needs further and get more personalized service.</li>
                     </ol>
-                    <a href="solar-calculator.html" class="btn btn-primary rounded-pill py-3 px-5">Go to Solar Calculator</a>
+                    <a href="solar-calculator.html" class="btn btn-primary rounded-pill py-3 px-5"><b>Go to Solar Calculator</b></a>
                 </div>
             </div>
         </div>
@@ -499,8 +500,24 @@
                             </div>
                         </div>
                         <div class="p-4">
-                            <h5>Full Name</h5>
-                            <span>Designation</span>
+                            <h5>Engr Ifeanyi Barth</h5>
+                            <span>Chief Operating Officer</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="team-item rounded overflow-hidden">
+                        <div class="d-flex">
+                            <img class="img-fluid w-75" src="img/team-1.jpg" alt="">
+                            <div class="team-social w-25">
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                        <div class="p-4">
+                            <h5>Mr </h5>
+                            <span>Managing Director</span>
                         </div>
                     </div>
                 </div>
@@ -515,8 +532,8 @@
                             </div>
                         </div>
                         <div class="p-4">
-                            <h5>Full Name</h5>
-                            <span>Designation</span>
+                            <h5>Engr Josh</h5>
+                            <span>Lead Installer</span>
                         </div>
                     </div>
                 </div>
@@ -531,8 +548,8 @@
                             </div>
                         </div>
                         <div class="p-4">
-                            <h5>Full Name</h5>
-                            <span>Designation</span>
+                            <h5>Mrs Janeth</h5>
+                            <span>Customer Care Personnel</span>
                         </div>
                     </div>
                 </div>
