--- a/test.html
+++ b/test.html
@@ -38,6 +38,30 @@
             { id: 2, name: "1.5kVA Inverter", description: "Great for powering appliances.", price: 180000 },
             { id: 3, name: "2kVA Inverter", description: "Suitable for medium-sized homes.", price: 230000 },
             { id: 4, name: "2.5kVA Inverter", description: "High-performance inverter.", price: 290000 },
+           { id: 5, name: "3kVA Inverter", price: 390000 },
+            { id: 6, name: "3.5kVA Inverter", price: 450000 },
+            { id: 7, name: "5kVA Inverter", price: 650000 },
+            { id: 8, name: "7.5kVA Inverter", price: 1200000 },
+            { id: 9, name: "10kVA Inverter", price: 1400000 },
+            { id: 10, name: "100W Solar Panel", price: 37000 },
+            { id: 11, name: "180W Solar Panel", price: 48000 },
+            { id: 12, name: "200W Solar Panel", price: 50000 },
+            { id: 13, name: "250W Solar Panel", price: 70000 },
+            { id: 14, name: "280W Solar Panel", price: 75000 },
+            { id: 15, name: "300W Solar Panel", price: 80000 },
+            { id: 16, name: "330W Solar Panel", price: 90000 },
+            { id: 17, name: "350W Solar Panel", price: 100000 },
+            { id: 18, name: "450W Solar Panel", price: 120000 },
+            { id: 19, name: "480W Solar Panel", price: 115000 },
+            { id: 20, name: "550W Solar Panel", price: 130000 },
+            { id: 21, name: "MPPT Charge Controller 30A", price: 80000 },
+            { id: 22, name: "MPPT Charge Controller 40A", price: 100000 },
+            { id: 23, name: "MPPT Charge Controller 60A", price: 150000 },
+            { id: 24, name: "MPPT Charge Controller 80A", price: 230000 },
+            { id: 25, name: "MPPT Charge Controller 100A", price: 260000 },
+            { id: 26, name: "Solar Street Light 100W", price: 120000 },
+            { id: 27, name: "Solar Street Light 200W", price: 200000 },
+            { id: 28, name: "Solar Street Light 300W", price: 250000 }
         ];
 
         const cart = new Map();
