--- a/test.html
+++ b/test.html
@@ -20,6 +20,8 @@
         .cart-btn:disabled { background-color: gray; cursor: not-allowed; }
         #cart-container { margin-top: 20px; }
         #total-price { font-weight: bold; }
+        #checkout-btn { background-color: #26d48c; color: white; border: none; padding: 10px 20px; border-radius: 50px; cursor: pointer; margin-top: 10px; }
+        #account-details { display: none; border: 1px solid #ddd; padding: 20px; margin-top: 10px; background-color: #f9f9f9; }
     </style>
 </head>
 <body>
@@ -30,45 +32,54 @@
         <h2>Shopping Cart</h2>
         <ul id="cart"></ul>
         <p id="total-price">Total: ₦0</p>
+        <button id="checkout-btn">Checkout</button>
+        <div id="account-details">
+            <p><strong>Account Number:</strong> 1234567890</p>
+            <p><strong>Account Name:</strong> Tasha Solar</p>
+            <p><strong>Bank:</strong> Moniepoint</p>
+        </div>
     </div>
 
     <script>
-        const products = [
-            { id: 1, name: "1kVA Inverter", description: "A reliable inverter for small homes.", price: 140000 },
-            { id: 2, name: "1.5kVA Inverter", description: "Great for powering appliances.", price: 180000 },
-            { id: 3, name: "2kVA Inverter", description: "Suitable for medium-sized homes.", price: 230000 },
-            { id: 4, name: "2.5kVA Inverter", description: "High-performance inverter.", price: 290000 },
-           { id: 5, name: "3kVA Inverter", price: 390000 },
-            { id: 6, name: "3.5kVA Inverter", price: 450000 },
-            { id: 7, name: "5kVA Inverter", price: 650000 },
-            { id: 8, name: "7.5kVA Inverter", price: 1200000 },
-            { id: 9, name: "10kVA Inverter", price: 1400000 },
-            { id: 10, name: "100W Solar Panel", price: 37000 },
-            { id: 11, name: "180W Solar Panel", price: 48000 },
-            { id: 12, name: "200W Solar Panel", price: 50000 },
-            { id: 13, name: "250W Solar Panel", price: 70000 },
-            { id: 14, name: "280W Solar Panel", price: 75000 },
-            { id: 15, name: "300W Solar Panel", price: 80000 },
-            { id: 16, name: "330W Solar Panel", price: 90000 },
-            { id: 17, name: "350W Solar Panel", price: 100000 },
-            { id: 18, name: "450W Solar Panel", price: 120000 },
-            { id: 19, name: "480W Solar Panel", price: 115000 },
-            { id: 20, name: "550W Solar Panel", price: 130000 },
-            { id: 21, name: "MPPT Charge Controller 30A", price: 80000 },
-            { id: 22, name: "MPPT Charge Controller 40A", price: 100000 },
-            { id: 23, name: "MPPT Charge Controller 60A", price: 150000 },
-            { id: 24, name: "MPPT Charge Controller 80A", price: 230000 },
-            { id: 25, name: "MPPT Charge Controller 100A", price: 260000 },
-            { id: 26, name: "Solar Street Light 100W", price: 120000 },
-            { id: 27, name: "Solar Street Light 200W", price: 200000 },
-            { id: 28, name: "Solar Street Light 300W", price: 250000 }
-        ];
+    const products = [
+    { id: 1, name: "1kVA Inverter", description: "A reliable inverter for small homes.", price: 140000, img: "https://via.placeholder.com/150?text=1kVA+Inverter" },
+    { id: 2, name: "1.5kVA Inverter", description: "Great for powering appliances.", price: 180000, img: "https://via.placeholder.com/150?text=1.5kVA+Inverter" },
+    { id: 3, name: "2kVA Inverter", description: "Suitable for medium-sized homes.", price: 230000, img: "https://via.placeholder.com/150?text=2kVA+Inverter" },
+    { id: 4, name: "2.5kVA Inverter", description: "High-performance inverter.", price: 290000, img: "https://via.placeholder.com/150?text=2.5kVA+Inverter" },
+    { id: 5, name: "3kVA Inverter", description: "Powerful inverter for larger homes.", price: 390000, img: "https://via.placeholder.com/150?text=3kVA+Inverter" },
+    { id: 6, name: "3.5kVA Inverter", description: "Advanced inverter for heavy use.", price: 450000, img: "https://via.placeholder.com/150?text=3.5kVA+Inverter" },
+    { id: 7, name: "5kVA Inverter", description: "High capacity inverter.", price: 650000, img: "https://via.placeholder.com/150?text=5kVA+Inverter" },
+    { id: 8, name: "7.5kVA Inverter", description: "Premium performance inverter.", price: 1200000, img: "https://via.placeholder.com/150?text=7.5kVA+Inverter" },
+    { id: 9, name: "10kVA Inverter", description: "Industrial-grade inverter.", price: 1400000, img: "https://via.placeholder.com/150?text=10kVA+Inverter" },
+    { id: 10, name: "100W Solar Panel", description: "Compact and efficient solar panel.", price: 37000, img: "https://via.placeholder.com/150?text=100W+Solar+Panel" },
+    { id: 11, name: "180W Solar Panel", description: "Enhanced power generation.", price: 48000, img: "https://via.placeholder.com/150?text=180W+Solar+Panel" },
+    { id: 12, name: "200W Solar Panel", description: "Reliable solar panel for home use.", price: 50000, img: "https://via.placeholder.com/150?text=200W+Solar+Panel" },
+    { id: 13, name: "250W Solar Panel", description: "High-efficiency solar panel.", price: 70000, img: "https://via.placeholder.com/150?text=250W+Solar+Panel" },
+    { id: 14, name: "280W Solar Panel", description: "Advanced solar technology.", price: 75000, img: "https://via.placeholder.com/150?text=280W+Solar+Panel" },
+    { id: 15, name: "300W Solar Panel", description: "Durable and reliable.", price: 80000, img: "https://via.placeholder.com/150?text=300W+Solar+Panel" },
+    { id: 16, name: "330W Solar Panel", description: "High-output solar panel.", price: 90000, img: "https://via.placeholder.com/150?text=330W+Solar+Panel" },
+    { id: 17, name: "350W Solar Panel", description: "Optimized for peak performance.", price: 100000, img: "img/solar-panels.jpg" },
+    { id: 18, name: "450W Solar Panel", description: "Next-gen solar technology.", price: 120000, img: "https://via.placeholder.com/150?text=450W+Solar+Panel" },
+    { id: 19, name: "480W Solar Panel", description: "Maximized energy output.", price: 115000, img: "https://via.placeholder.com/150?text=480W+Solar+Panel" },
+    { id: 20, name: "550W Solar Panel", description: "Powerful solar panel solution.", price: 130000, img: "https://via.placeholder.com/150?text=550W+Solar+Panel" },
+    { id: 21, name: "MPPT Charge Controller 30A", description: "Efficient charge controller.", price: 80000, img: "https://via.placeholder.com/150?text=30A+Charge+Controller" },
+    { id: 22, name: "MPPT Charge Controller 40A", description: "Advanced power control.", price: 100000, img: "https://via.placeholder.com/150?text=40A+Charge+Controller" },
+    { id: 23, name: "MPPT Charge Controller 60A", description: "High-capacity controller.", price: 150000, img: "https://via.placeholder.com/150?text=60A+Charge+Controller" },
+    { id: 24, name: "MPPT Charge Controller 80A", description: "Reliable power regulation.", price: 230000, img: "https://via.placeholder.com/150?text=80A+Charge+Controller" },
+    { id: 25, name: "MPPT Charge Controller 100A", description: "Top-tier charge controller.", price: 260000, img: "https://via.placeholder.com/150?text=100A+Charge+Controller" },
+    { id: 26, name: "Solar Street Light 100W", description: "Bright and efficient.", price: 120000, img: "https://via.placeholder.com/150?text=100W+Street+Light" },
+    { id: 27, name: "Solar Street Light 200W", description: "Enhanced outdoor lighting.", price: 200000, img: "https://via.placeholder.com/150?text=200W+Street+Light" },
+    { id: 28, name: "Solar Street Light 300W", description: "Industrial-grade lighting.", price: 250000, img: "https://via.placeholder.com/150?text=300W+Street+Light" },
+];
+
 
         const cart = new Map();
         const productContainer = document.getElementById("productContainer");
         const searchInput = document.getElementById("searchInput");
         const cartElement = document.getElementById("cart");
         const totalPriceElement = document.getElementById("total-price");
+        const checkoutBtn = document.getElementById("checkout-btn");
+        const accountDetails = document.getElementById("account-details");
 
         function displayProducts(items) {
             productContainer.innerHTML = "";
@@ -81,7 +92,7 @@
                 productHeader.className = "product-header";
 
                 const img = document.createElement("img");
-                img.src = "https://via.placeholder.com/150";
+                img.src = product.img;
                 img.alt = product.name;
 
                 const productDetails = document.createElement("div");
@@ -160,7 +171,13 @@
             displayProducts(filteredProducts);
         });
 
+        // Show account details on checkout
+        checkoutBtn.addEventListener("click", () => {
+            accountDetails.style.display = "block";
+        });
+
         displayProducts(products);
     </script>
 </body>
 </html>
+ 
