--- a/solar-store.html
+++ b/solar-store.html
@@ -47,8 +47,31 @@
             { id: 1, name: "1kVA Inverter", description: "A reliable inverter for small homes.", price: 140000, img: "img/tasha-1kva.jpeg" },
             { id: 2, name: "1.5kVA Inverter", description: "Great for powering appliances.", price: 180000, img: "img/tasha-1kva.jpeg" },
             { id: 3, name: "2kVA Inverter", description: "Suitable for medium-sized homes.", price: 230000, img: "img/tasha-2kva.jpeg" },
-            // Add more products as needed...
-        ];
+            { id: 5, name: "3kVA Inverter", description: "Powerful inverter for larger homes.", price: 390000, img: "img/tasha-2kva.jpeg" },
+    { id: 6, name: "3.5kVA Inverter", description: "Advanced inverter for heavy use.", price: 450000, img: "img/tasha-2kva.jpeg" },
+    { id: 7, name: "5kVA Inverter", description: "High capacity inverter.", price: 650000, img: "img/tasha-10kva.jpeg" },
+    { id: 8, name: "7.5kVA Inverter", description: "Premium performance inverter.", price: 1200000, img: "img/tasha-10kva.jpeg" },
+    { id: 9, name: "10kVA Inverter", description: "Industrial-grade inverter.", price: 1400000, img: "img/tasha-10kva.jpeg" },
+    { id: 10, name: "100W Solar Panel", description: "Compact and efficient solar panel.", price: 37000, img: "img/solar_panels.jpg" },
+    { id: 11, name: "180W Solar Panel", description: "Enhanced power generation.", price: 48000, img: "img/solar_panels.jpg" },
+    { id: 12, name: "200W Solar Panel", description: "Reliable solar panel for home use.", price: 50000, img: "img/solar_panels.jpg" },
+    { id: 13, name: "250W Solar Panel", description: "High-efficiency solar panel.", price: 70000, img: "img/solar_panels.jpg" },
+    { id: 14, name: "280W Solar Panel", description: "Advanced solar technology.", price: 75000, img: "img/solar_panels.jpg" },
+    { id: 15, name: "300W Solar Panel", description: "Durable and reliable.", price: 80000, img: "img/solar_panels.jpg" },
+    { id: 16, name: "330W Solar Panel", description: "High-output solar panel.", price: 90000, img: "img/solar_panels.jpg" },
+    { id: 17, name: "350W Solar Panel", description: "Optimized for peak performance.", price: 100000, img: "img/solar_panels.jpg" },
+    { id: 18, name: "450W Solar Panel", description: "Next-gen solar technology.", price: 120000, img: "img/solar_panels.jpg" },
+    { id: 19, name: "480W Solar Panel", description: "Maximized energy output.", price: 115000, img: "img/solar_panels.jpg" },
+    { id: 20, name: "550W Solar Panel", description: "Powerful solar panel solution.", price: 130000, img: "img/solar_panels.jpg" },
+    { id: 21, name: "MPPT Charge Controller 30A", description: "Efficient charge controller.", price: 80000, img: "img/tasha-charge-controller.jpeg" },
+    { id: 22, name: "MPPT Charge Controller 40A", description: "Advanced power control.", price: 100000, img: "img/tasha-charge-controller.jpeg" },
+    { id: 23, name: "MPPT Charge Controller 60A", description: "High-capacity controller.", price: 150000, img: "img/tasha-charge-controller.jpeg" },
+    { id: 24, name: "MPPT Charge Controller 80A", description: "Reliable power regulation.", price: 230000, img: "img/tasha-charge-controller.jpeg" },
+    { id: 25, name: "MPPT Charge Controller 100A", description: "Top-tier charge controller.", price: 260000, img: "img/controller-100A.jpeg" },
+    { id: 26, name: "Solar Street Light 100W", description: "Bright and efficient.", price: 120000, img: "img/tasha-streetlight1.jpeg" },
+    { id: 27, name: "Solar Street Light 200W", description: "Enhanced outdoor lighting.", price: 200000, img: "img/tasha-streetlight1.jpeg" },
+    { id: 28, name: "Solar Street Light 300W", description: "Industrial-grade lighting.", price: 250000, img: "img/tasha-streetlight1.jpeg" },
+];
 
         const cart = new Map();
         const productContainer = document.getElementById("productContainer");
