--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Tasha Solar - Solar Inverter Systems & Renewable Energy</title>
+    <title>Tasha Solar - Solar Inverter Systems, Sales and Installation</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Solar inverter systems, renewable energy, solar panels, clean energy solutions" name="keywords">
     <meta content="Tasha Solar provides cutting-edge solar inverter systems and renewable energy solutions to power your home and business efficiently." name="description">
@@ -622,8 +622,7 @@
             <div class="col-lg-6 col-md-6">
                 <h5 class="text-white mb-4">Address & Contact</h5>
                 <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Block A27 New Kenyatta Building Material Market, Enugu</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>07035628665</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>08060382537</p>
+                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>08060382537 || 07035628665</p>
                 <p class="mb-2"><i class="fa fa-envelope me-3"></i>cedaccinfo@gmail.com</p>
                 <div class="d-flex pt-2">
                     <a class="btn btn-square btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
@@ -649,11 +648,11 @@
     <div class="container">
         <div class="copyright">
             <div class="row">
-                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                <div class="col-md-6 text-left text-md-start mb-3 mb-md-0">
                     &copy; <a href="#">Tasha Solar</a>, All Rights Reserved.
                 </div>
-                <div class="col-md-6 text-center text-md-end">
-                    Designed By <a href="https://htmlcodex.com">HTML Codex</a>
+                <div class="col-md-6 text-right text-md-end">
+                    Designed By <a href="https://cyberbillafrica.github.io/portal/">CyberBill Africa 🌍</a>
                 </div>
             </div>
         </div>
