--- a/test.html
+++ b/test.html
@@ -4,7 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solar Products Store</title>
-    <style>
+    <!-- Open Graph Meta Tags -->
+<meta property="og:title" content="Solar Products Store: Affordable Inverters and Panels for Your Energy Needs">
+<meta property="og:description" content="Browse and shop for high-quality solar inverters, panels, and accessories at unbeatable prices.">
+<meta property="og:image" content="img/tasha.jpeg" />
+<meta property="og:image:type" content="image/jpeg" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="630" />
+<meta property="og:url" content="https://yourwebsite.com/solar-store.html" />
+<meta property="og:type" content="website" />
+
+<!-- Twitter Card Meta Tags -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Solar Products Store: Affordable Inverters and Panels for Your Energy Needs" />
+<meta name="twitter:description" content="Shop now for top-notch solar inverters, panels, and accessories designed to meet your energy needs.">
+<meta name="twitter:image" content="img/tasha.jpeg" />
+
+     <!-- Favicon -->
+    <link href="img/tasha-logo.jpeg" rel="icon">
+
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&family=Roboto:wght@500;700;900&display=swap" rel="stylesheet"> 
+
+    <!-- Icon Font Stylesheet -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+
+    <!-- Libraries Stylesheet -->
+    <link href="lib/animate/animate.min.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet">
+
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+   <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
         h1 { text-align: center; }
         input { padding: 8px; width: 300px; margin: 10px auto; display: block; }
