--- a/test.html
+++ b/test.html
@@ -246,5 +246,55 @@
 
         displayProducts(products);
     </script>
+
+    <!-- Footer Start -->
+<div class="container-fluid bg-dark text-body footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container py-5">
+        <div class="row g-5">
+            <!-- Address Section -->
+            <div class="col-lg-6 col-md-6">
+                <h5 class="text-white mb-4">Address & Contact</h5>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Block A27 New Kenyatta Building Material Market, Enugu</p>
+                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>08060382537 || 07035628665</p>
+                <p class="mb-2"><i class="fa fa-envelope me-3"></i>cedaccinfo@gmail.com</p>
+                <div class="d-flex pt-2">
+                    <a class="btn btn-square btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-square btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-square btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-square btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+
+            <!-- Quick Links Section -->
+            <div class="col-lg-6 col-md-6">
+                <h5 class="text-white mb-4">Quick Links</h5>
+                <a class="btn btn-link text-light" href="">About Us</a>
+                <a class="btn btn-link text-light" href="">Contact Us</a>
+                <a class="btn btn-link text-light" href="">Our Services</a>
+                <a class="btn btn-link text-light" href="">Terms & Condition</a>
+                <a class="btn btn-link text-light" href="">Support</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer Bottom Section -->
+    <div class="container">
+        <div class="copyright">
+            <div class="row">
+                <div class="col-md-6 text-left text-md-start mb-3 mb-md-0">
+                    &copy; <a href="#">Tasha Solar</a>, All Rights Reserved.
+                </div>
+                <div class="col-md-6 text-right text-md-end">
+                    Designed By <a href="https://cyberbillafrica.github.io/portal/">CyberBill Africa 🌍</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Footer End -->
+
+<!-- Back to Top Button -->
+<a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
+
 </body>
 </html>
