--- a/test.html
+++ b/test.html
@@ -249,6 +249,7 @@
 
     <!-- Footer Start -->
 <div class="container-fluid bg-dark text-body footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+    <!-- Footer Content -->
     <div class="container py-5">
         <div class="row g-5">
             <!-- Address Section -->
@@ -281,9 +282,11 @@
     <div class="container">
         <div class="copyright">
             <div class="row">
+                <!-- Left Section -->
                 <div class="col-md-6 text-left text-md-start mb-3 mb-md-0">
                     &copy; <a href="#">Tasha Solar</a>, All Rights Reserved.
                 </div>
+                <!-- Right Section -->
                 <div class="col-md-6 text-right text-md-end">
                     Designed By <a href="https://cyberbillafrica.github.io/portal/">CyberBill Africa 🌍</a>
                 </div>
@@ -292,6 +295,7 @@
     </div>
 </div>
 <!-- Footer End -->
+
 
 <!-- Back to Top Button -->
 <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
