--- a/test.html
+++ b/test.html
@@ -39,7 +39,9 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-   <style>
+       <!-- Template Stylesheet -->
+    <link href="css/style.css" rel="stylesheet">
+<style>
        
         body { font-family: Arial, sans-serif; margin: 20px; }
         h1 { text-align: center; }
