--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Solar inverter systems, renewable energy, solar panels, clean energy solutions" name="keywords">
     <meta content="Tasha Solar provides cutting-edge solar inverter systems and renewable energy solutions to power your home and business efficiently." name="description">
+    <meta property="og:title" content="Solar Calculator: How much will it Cost you to Power your House? Find out!">
+    <meta property="og:description"content="Find out Cost of Solar Inverter System for your energy need">
+    <meta property="og:image" content="https://cyberbillafrica.github.io/artisanshub/img/solar-calc.jpeg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://cyberbillafrica.github.io/artisanshub/solar.html" />
+    <meta property="og:type" content="website" />
+    
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Solar Calculator: How much will it Cost you to Power your House? Find out!" />
+    <meta name="twitter:description" content="Calculate Your Solar Power System Requirement and Cost" />
+    <meta name="twitter:image" content="https://cyberbillafrica.github.io/artisanshub/img/solar-calc.jpeg" />
 
     <!-- Favicon -->
     <link href="img/tasha-logo.jpeg" rel="icon">
@@ -402,9 +416,9 @@
 
 
    <!-- Quote Start -->
-<<h3 class="text-primary">Get Quotation</h3>
+<h3 class="text-primary">Get Quotation</h3>
    <hr>
-    div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
+    <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
     <div class="container quote px-lg-0">
         <div class="row g-0 mx-lg-0">
             <div class="col-lg-6 ps-lg-0 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
@@ -421,7 +435,7 @@
                         <li>Enter your correct personal details.</li>
                         <li>Select and enter the quantities of all appliances you want to run on the solar inverter system.</li>
                         <li>Press the calculate button and allow the system to generate your requirements and estimated cost.</li>
-                        <li>Chat with one of our experts using the generated button link to discuss your needs further and get more personalized service.</li>
+                        <li>Chat with one of our experts using the generated button link to discuss your needs further and get more personalized attention.</li>
                     </ol>
                     <a href="solar-calculator.html" class="btn btn-primary rounded-pill py-3 px-5"><b>Go to Solar Calculator</b></a>
                 </div>
