--- a/solar-calculator.html
+++ b/solar-calculator.html
@@ -96,7 +96,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
+                <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="service.html" class="nav-item nav-link">Services</a>
                 <a href="project.html" class="nav-item nav-link">Projects</a>
@@ -115,9 +115,9 @@
             <h3 class="display-3 text-white animated slideInRight">Solar Energy Power Calculator</h3>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb animated slideInRight mb-0">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="contact.html">Contact</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Calculator</li>
+                    <li class="breadcrumb-item text-white"><a href="#">Home</a></li>
+                    <li class="breadcrumb-item text-white"><a href="contact.html">Contact</a></li>
+                    <li class="breadcrumb-item text-white active" aria-current="page">Calculator</li>
                 </ol>
             </nav>
         </div>
