--- a/calc.html
+++ b/calc.html
@@ -90,9 +90,10 @@
  
 	<hr>
 	    <div>
-		<h5> Are you an Experienced Installer with Verifiable Projects completed and wish to work with us?</h5>
-	    <div style="display: flex; justify-content: center;">
-         <button class="btn btn-primary mt-3" style="margin-bottom: 15px;">Register</button>
+    <h5>Are you an Experienced Installer with Verifiable Projects completed and wish to work with us?</h5>
+    <div style="display: flex; justify-content: center;">
+        <a href="installers.html"> <button class="btn btn-primary mt-3" style="margin-bottom: 15px;">Register</button> </a>
+    </div>
 	    </div>
 	    <!-- Share News Start-->
 <hr
