--- a/calc.html
+++ b/calc.html
@@ -87,13 +87,13 @@
     
     <div class="container">
         
-	<hr>
 	    <div>
     <h5>Are you an Experienced Installer with Verifiable Projects completed and wish to work with us?</h5>
     <div style="display: flex; justify-content: center;">
-        <a href="installers.html"> <button class="btn btn-primary mt-3" style="margin-bottom: 15px;">Register</button> </a>
+        <a href="installers.html"> <button class="btn btn-primary mt-3" style="margin-bottom: 15px;">Register for Jobs</button> </a>
     </div>
-	  <h1 class="text-center" style="color: #26d48c;">Solar Inverter System Calculator</h1>
+	 <hr>
+		    <h1 class="text-center" style="color: #26d48c;">Solar Inverter System Calculator</h1>
    </div>
 	    <!-- Share News Start-->
 <hr
