--- a/installers_reg.html
+++ b/installers_reg.html
@@ -144,6 +144,14 @@
                 <input type="email" class="form-control" id="userEmail" name="email" placeholder="Enter your Email" required>
                 <label for="userEmail">Enter your Email</label>
             </div>
+            <div class="form-floating mt-3">
+    <select class="form-select" id="userGender" name="gender" required>
+        <option value="" disabled selected>Select your Gender</option>
+        <option value="Male">Male</option>
+        <option value="Female">Female</option>
+    </select>
+    <label for="userGender">Gender</label>
+            </div>
 
             <!-- Home Address -->
             <div class="form-floating mt-3">
@@ -171,29 +179,91 @@
     </div>
             <!-- State of Origin -->
             <div class="form-floating mt-3">
-                <select class="form-select" id="userOrigin" name="stateOfOrigin" required>
-                    <option value="" disabled selected>Select your State of Origin</option>
-                    <!-- Add all Nigerian states -->
-                    <option value="Abia">Abia</option>
-                    <option value="Adamawa">Adamawa</option>
-                    <option value="Akwa Ibom">Akwa Ibom</option>
-                    <option value="Anambra">Anambra</option>
-                    <!-- Add the remaining states here -->
-                </select>
-                <label for="userOrigin">State of Origin</label>
+ <select class="form-select" id="userOrigin" name="stateOfOrigin" required>
+<option value="" disabled selected>Select your State of Origin</option>
+<option value="Abia">Abia</option>
+<option value="Adamawa">Adamawa</option>
+<option value="Akwa Ibom">Akwa Ibom</option>
+<option value="Anambra">Anambra</option>
+<option value="Bauchi">Bauchi</option>
+<option value="Bayelsa">Bayelsa</option>
+<option value="Benue">Benue</option>
+<option value="Borno">Borno</option>
+<option value="Cross River">Cross River</option>
+<option value="Delta">Delta</option>
+<option value="Ebonyi">Ebonyi</option>
+<option value="Edo">Edo</option>
+<option value="Ekiti">Ekiti</option>
+<option value="Enugu">Enugu</option>
+<option value="Gombe">Gombe</option>
+<option value="Imo">Imo</option>
+<option value="Jigawa">Jigawa</option>
+<option value="Kaduna">Kaduna</option>
+<option value="Kano">Kano</option>
+<option value="Katsina">Katsina</option>
+<option value="Kebbi">Kebbi</option>
+<option value="Kogi">Kogi</option>
+<option value="Kwara">Kwara</option>
+<option value="Lagos">Lagos</option>
+<option value="Nasarawa">Nasarawa</option>
+<option value="Niger">Niger</option>
+<option value="Ogun">Ogun</option>
+<option value="Ondo">Ondo</option>
+<option value="Osun">Osun</option>
+<option value="Oyo">Oyo</option>
+<option value="Plateau">Plateau</option>
+<option value="Rivers">Rivers</option>
+<option value="Sokoto">Sokoto</option>
+<option value="Taraba">Taraba</option>
+<option value="Yobe">Yobe</option>
+<option value="Zamfara">Zamfara</option>
+<option value="FCT">FCT</option>
+</select>
+     <label for="userOrigin">State of Origin</label>
             </div>
 
             <!-- State of Residence -->
             <div class="form-floating mt-3">
-                <select class="form-select" id="userResidence" name="stateOfResidence" required>
-                    <option value="" disabled selected>Select your State of Residence</option>
-                    <!-- Add all Nigerian states -->
-                    <option value="Abia">Abia</option>
-                    <option value="Adamawa">Adamawa</option>
-                    <option value="Akwa Ibom">Akwa Ibom</option>
-                    <option value="Anambra">Anambra</option>
-                    <!-- Add the remaining states here -->
-                </select>
+  <select class="form-select" id="userResidence" name="stateOfResidence" required>
+<option value="" disabled selected>Select your State of Residence</option>
+<option value="Abia">Abia</option>
+<option value="Adamawa">Adamawa</option>
+<option value="Akwa Ibom">Akwa Ibom</option>
+<option value="Anambra">Anambra</option>
+<option value="Bauchi">Bauchi</option>
+<option value="Bayelsa">Bayelsa</option>
+<option value="Benue">Benue</option>
+<option value="Borno">Borno</option>
+<option value="Cross River">Cross River</option>
+<option value="Delta">Delta</option>
+<option value="Ebonyi">Ebonyi</option>
+<option value="Edo">Edo</option>
+<option value="Ekiti">Ekiti</option>
+<option value="Enugu">Enugu</option>
+<option value="Gombe">Gombe</option>
+<option value="Imo">Imo</option>
+<option value="Jigawa">Jigawa</option>
+<option value="Kaduna">Kaduna</option>
+<option value="Kano">Kano</option>
+<option value="Katsina">Katsina</option>
+<option value="Kebbi">Kebbi</option>
+<option value="Kogi">Kogi</option>
+<option value="Kwara">Kwara</option>
+<option value="Lagos">Lagos</option>
+<option value="Nasarawa">Nasarawa</option>
+<option value="Niger">Niger</option>
+<option value="Ogun">Ogun</option>
+<option value="Ondo">Ondo</option>
+<option value="Osun">Osun</option>
+<option value="Oyo">Oyo</option>
+<option value="Plateau">Plateau</option>
+<option value="Rivers">Rivers</option>
+<option value="Sokoto">Sokoto</option>
+<option value="Taraba">Taraba</option>
+<option value="Yobe">Yobe</option>
+<option value="Zamfara">Zamfara</option>
+<option value="FCT">FCT</option>
+</select>
                 <label for="userResidence">State of Residence</label>
             </div>
 
