--- a/terms.html
+++ b/terms.html
@@ -68,19 +68,16 @@
         <p>
             These terms and conditions are governed by the laws of the Federal Republic of Nigeria. Any disputes arising from this agreement shall be resolved in accordance with Nigerian law.
         </p>
-
-        <div class="form-check mt-5">
-            <input class="form-check-input" type="checkbox" id="agreeToTerms" required>
-            <label class="form-check-label" for="agreeToTerms">
-                I have read, understood, and agree to the terms and conditions.
-            </label>
-        </div>
-
-        <div class="mt-4">
-            <button type="submit" class="btn btn-success w-100">Proceed with Registration</button>
+    </div>
+<!-- Copyright Start -->
+    <div class="container-fluid copyright bg-dark py-4">
+        <div class="container text-center">
+            <p class="mb-2">Copyright &copy; <a class="fw-semi-bold" href="index.html">Tasha Energy</a>, All Right Reserved.</p>
+            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+            <p class="mb-0">Designed By <a class="fw-semi-bold" href="https://htmlcodex.com">CyberBill Africa</a></p>
         </div>
     </div>
-
+    <!-- Copyright End -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
