--- a/calc.html
+++ b/calc.html
@@ -90,7 +90,7 @@
 	    <div>
     <h5>Are you an Experienced Installer with Verifiable Projects completed and wish to work with us?</h5>
     <div style="display: flex; justify-content: center;">
-        <a href="installers.html"> <button class="btn btn-primary mt-3" style="margin-bottom: 15px;">Register for Jobs</button> </a>
+        <a href="installers_reg.html"> <button class="btn btn-primary mt-3" style="margin-bottom: 15px;">Register for Jobs</button> </a>
     </div>
 	 <hr>
 		    <h1 class="text-center" style="color: #26d48c;">Solar Inverter System Calculator</h1>
