--- a/terms.html
+++ b/terms.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center">Terms and Conditions</h1>
+        <h1 class="text-center text-primary">Terms and Conditions</h1>
         <p class="mt-4">
             By registering as a solar installer with us, you agree to the following terms and conditions. Please read carefully before proceeding with your registration.
         </p>
@@ -72,10 +72,7 @@
 <!-- Copyright Start -->
     <div class="container-fluid copyright bg-dark py-4">
         <div class="container text-center">
-            <p class="mb-2">Copyright &copy; <a class="fw-semi-bold" href="index.html">Tasha Energy</a>, All Right Reserved.</p>
-            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-            <p class="mb-0">Designed By <a class="fw-semi-bold" href="https://htmlcodex.com">CyberBill Africa</a></p>
-        </div>
+      </div>
     </div>
     <!-- Copyright End -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
