--- a/installers_reg.html
+++ b/installers_reg.html
@@ -362,7 +362,7 @@ textarea.addEventListener('input', () => {
                 </label>
             </div>
 
-            <!-- Google Form Link -->
+            <!-- Google Form Link --
             <div class="mt-4 ">
                 <p><b>Step 2: Upload Images For Verification</b></p>
                 <a href="https://forms.gle/YOUR_GOOGLE_FORM_LINK" target="_blank" class="btn btn-primary">Click here to upload images</a>
