--- a/installers_reg.html
+++ b/installers_reg.html
@@ -349,9 +349,9 @@ textarea.addEventListener('input', () => {
             </div>
 
             <!-- Preferred Locations for Work -->
-            <div class="form-floating mt-3">
-                <p>Tell us other states or cities you can go to execute an installation at no extra cost</p>
-                <input type="text" class="form-control" id="userPreferred" name="preferredLocations" placeholder="Enter Preferred Locations">
+           <p>Tell us other states or cities you can go to execute an installation at no extra cost</p>
+              <div class="form-floating mt-3">
+                   <input type="text" class="form-control" id="userPreferred" name="preferredLocations" placeholder="Enter Preferred Locations">
                 <label for="userPreferred">Preferred Locations for Work</label>
             </div>
 
@@ -372,14 +372,14 @@ textarea.addEventListener('input', () => {
 
             <!-- Submit Button -->
             <div class="mt-4">
-                <button type="submit" class="btn btn-success w-100">Submit Registration</button>
+                <button type="submit" class="btn btn-success w-100">Save Details</button>
             </div>
         </form>
    </div>
 
 <!-- Success Message and Upload Instructions -->
         <div id="uploadInstructions" style="display: none;" class="mt-5">
-            <h3>Registration Successful!</h3>
+            <h3>Details Saved!</h3>
             <p>Your details have been saved successfully. To complete your registration, please upload the required documents using the link below.</p>
             <ul>
                 <li>Picture showing your face (passport-style)</li>
