--- a/installers_reg.html
+++ b/installers_reg.html
@@ -349,12 +349,13 @@ textarea.addEventListener('input', () => {
             </div>
 
             <!-- Preferred Locations for Work -->
-           <p>Tell us other states or cities you can go to execute an installation at no extra cost</p>
+          <div>
+              <p><i>Tell us other states or cities you can go to execute an installation at no extra cost</i></p>
               <div class="form-floating mt-3">
                    <input type="text" class="form-control" id="userPreferred" name="preferredLocations" placeholder="Enter Preferred Locations">
                 <label for="userPreferred">Preferred Locations for Work</label>
             </div>
-
+          </div>
             <!-- Declaration -->
             <div class="form-check mt-3">
                 <input class="form-check-input" type="checkbox" id="userAuthenticity" name="authenticity" required>
@@ -372,7 +373,7 @@ textarea.addEventListener('input', () => {
 
             <!-- Submit Button -->
             <div class="mt-4">
-                <button type="submit" class="btn btn-success w-100">Save Details</button>
+                <button type="submit" class="btn btn-success w-80">Save Details and Continues</button>
             </div>
         </form>
    </div>
@@ -380,11 +381,12 @@ textarea.addEventListener('input', () => {
 <!-- Success Message and Upload Instructions -->
         <div id="uploadInstructions" style="display: none;" class="mt-5">
             <h3>Details Saved!</h3>
-            <p>Your details have been saved successfully. To complete your registration, please upload the required documents using the link below.</p>
+            <p>Your details have been saved successfully. To complete your registration, please upload the required documents using the link under.</p>
             <ul>
                 <li>Picture showing your face (passport-style)</li>
                 <li>Picture at a solar installation site</li>
                 <li>Picture of a completed project</li>
+                <li>Certificate of Technical Training (if any/available)</li>
                 <li>Government Means of Identification (NIN, Voter’s Card, Driver’s License, or Passport)</li>
             </ul>
             <a href="https://forms.gle/RM1a2FUU7htEi4so6" class="btn btn-primary w-100">Upload Documents</a>
