--- a/installers_reg.html
+++ b/installers_reg.html
@@ -379,7 +379,9 @@ textarea.addEventListener('input', () => {
    </div>
 
 <!-- Success Message and Upload Instructions -->
-        <div id="uploadInstructions" style="display: none;" class="mt-5">
+        <div class="container-fluid page-header py-5 mb-3 wow fadeIn" data-wow-delay="0.1s">
+        <div class="container py-5">
+            <div id="uploadInstructions" style="display: none;" class="mt-5">
             <h3>Details Saved!</h3>
             <p>Your details have been saved successfully. To complete your registration, please upload the required documents using the link under.</p>
             <ul>
@@ -391,7 +393,8 @@ textarea.addEventListener('input', () => {
             </ul>
             <a href="https://forms.gle/RM1a2FUU7htEi4so6" class="btn btn-primary w-100">Upload Documents</a>
         </div>
-
+        </div>
+        </div>
     <hr>
 <!-- Copyright Start -->
     <div class="container-fluid copyright bg-dark py-4">
