--- a/installers_reg.html
+++ b/installers_reg.html
@@ -365,12 +365,6 @@ textarea.addEventListener('input', () => {
                 </label>
             </div>
 
-            <!-- Google Form Link --
-            <div class="mt-4 ">
-                <p><b>Step 2: Upload Images For Verification</b></p>
-                <a href="https://forms.gle/YOUR_GOOGLE_FORM_LINK" target="_blank" class="btn btn-primary">Click here to upload images</a>
-            </div>
-
             <!-- Submit Button -->
             <div class="mt-4">
                 <button type="submit" class="btn btn-success text-center w-100">Save Details and Continues</button>
@@ -379,8 +373,7 @@ textarea.addEventListener('input', () => {
    </div>
 
 <!-- Success Message and Upload Instructions -->
-        <div class="container-fluid page-header py-5 mb-3 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container py-5">
+        <div class="container">
             <div id="uploadInstructions" style="display: none;" class="mt-5">
             <h3>Details Saved!</h3>
             <p>Your details have been saved successfully. To complete your registration, please upload the required documents using the link under.</p>
@@ -392,7 +385,6 @@ textarea.addEventListener('input', () => {
                 <li>Government Means of Identification (NIN, Voter’s Card, Driver’s License, or Passport)</li>
             </ul>
             <a href="https://forms.gle/RM1a2FUU7htEi4so6" class="btn btn-primary w-100">Upload Documents</a>
-        </div>
         </div>
         </div>
     <hr>
