--- a/installers_reg.html
+++ b/installers_reg.html
@@ -367,7 +367,7 @@ textarea.addEventListener('input', () => {
 
             <!-- Submit Button -->
             <div class="mt-4">
-                <button type="submit" class="btn btn-success text-center w-100">Save Details and Continues</button>
+                <button type="submit" class="btn btn-success text-center w-100">Save Details and Continue</button>
             </div>
         </form>
    </div>
@@ -375,7 +375,7 @@ textarea.addEventListener('input', () => {
 <!-- Success Message and Upload Instructions -->
         <div class="container">
             <div id="uploadInstructions" style="display: none;" class="mt-5">
-            <h3>Details Saved!</h3>
+            <h3 style="color: red;">Details Saved</h3>
             <p>Your details have been saved successfully. To complete your registration, please upload the required documents using the link under.</p>
             <ul>
                 <li>Picture showing your face (passport-style)</li>
